[gd_scene load_steps=11 format=3 uid="uid://dn6mystbuc8td"]

[ext_resource type="Script" path="res://levels/Scene01.gd" id="1_kft2a"]
[ext_resource type="PackedScene" uid="uid://bik34gto5kigi" path="res://PlayerCharacter.tscn" id="2_ym44g"]
[ext_resource type="Texture2D" uid="uid://c74wns5abxyn5" path="res://art/icon.svg" id="3_bba31"]
[ext_resource type="Script" path="res://levels/Resonate.gd" id="3_vv0xh"]
[ext_resource type="Texture2D" uid="uid://bnjgu38r1b64h" path="res://art/TargetSprite.png" id="5_e4rs7"]
[ext_resource type="PackedScene" uid="uid://c2x6q50p71qqu" path="res://win_screen.tscn" id="5_harac"]
[ext_resource type="PackedScene" uid="uid://cv3eegrfmr52c" path="res://PlayerCharacterSprite.tscn" id="7_wb6iw"]
[ext_resource type="PackedScene" uid="uid://cbh7cdu1660ww" path="res://charge_bar.tscn" id="8_spivo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijtae"]
size = Vector2(128, 128.681)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8p56y"]
size = Vector2(20.8682, 20.8682)

[node name="Scene02" type="Node"]
script = ExtResource("1_kft2a")

[node name="PlayerCharacter" parent="." instance=ExtResource("2_ym44g")]
position = Vector2(-74, -2)
scale = Vector2(0.388099, 0.388099)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(29, 81)

[node name="ChargeBarStartPosition" type="Marker2D" parent="."]
position = Vector2(29, 97)

[node name="Label" type="Label" parent="."]
offset_left = 35.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 33.0
scale = Vector2(2.39657, 0.766295)

[node name="Seconds" type="Label" parent="."]
offset_left = 41.0
offset_top = 37.0
offset_right = 81.0
offset_bottom = 60.0
scale = Vector2(1.50757, 0.597462)

[node name="Resonate" type="StaticBody2D" parent="." groups=["resonates"]]
position = Vector2(178, 6)
scale = Vector2(0.268504, 0.469468)
script = ExtResource("3_vv0xh")

[node name="SpawnResonate" type="Marker2D" parent="Resonate"]
position = Vector2(6.10352e-05, 83.0728)
scale = Vector2(1.1875, 1.46875)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resonate"]
scale = Vector2(1.1875, 1.46875)
shape = SubResource("RectangleShape2D_ijtae")

[node name="Sprite2D" type="Sprite2D" parent="Resonate"]
scale = Vector2(1.1875, 1.46875)
texture = ExtResource("3_bba31")

[node name="Target" type="Area2D" parent="."]
position = Vector2(240, 67)
scale = Vector2(0.766716, 0.766716)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target"]
shape = SubResource("RectangleShape2D_8p56y")

[node name="Sprite2D" type="Sprite2D" parent="Target"]
texture = ExtResource("5_e4rs7")

[node name="WinScreen" parent="." instance=ExtResource("5_harac")]
visible = false

[node name="PlayerCharacterSprite" parent="." instance=ExtResource("7_wb6iw")]

[node name="ChargeBar" parent="." instance=ExtResource("8_spivo")]
scale = Vector2(0.5, 0.5)

[connection signal="area_entered" from="Target" to="." method="_on_target_area_entered"]
[connection signal="body_entered" from="Target" to="." method="_on_target_body_entered"]
[connection signal="goToNextLevel" from="WinScreen" to="." method="_on_win_screen_go_to_next_level"]
